--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About this website</span></h2>
-                                <p class="lead fw-light mb-4">Welcome to my WSSC internship portfolio!</p>
-                                <p class="text-muted">This website showcases the skills and knowledge I gained during my internship, 
+                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Welcome to my WSSC internship portfolio!</span></h2>
+                                <p class="lead fw-light mb-4">This website showcases the skills and knowledge I gained during my internship, 
                                     with a focus on my contributions to the Quality Assurance department and my experiences in other
                                      key areas of the company. Explore my journey to see what I had the privilege to work on.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
