--- a/other.html
+++ b/other.html
@@ -48,9 +48,11 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Project Management</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p><li>Shadowed project managers during status meetings</li>
+                                                <li>Created meeting minutes documents</li>
+                                                <li>Learned about different project management artifacts</li></p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.23.06 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -59,10 +61,12 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Business Analysts</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Business Analysis</h2>
+                                            <p><li>Understood the purpose and responsibilities of business analysts</li>
+                                                <li>Walked through the business analyst artifacts</li>
+                                                </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.26.41 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -72,9 +76,10 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Change Management</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p><li>Attended Change Advisory Board (CAB)/Technical Review Board (TRB) meetings to understand the processes</li>
+                                                <li>Walked through the weekly timeline cycles of change requests</li></p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.28.48 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -83,14 +88,14 @@
                 </div>
             </section>
             <!-- Call to action section-->
-            <section class="py-5 bg-gradient-primary-to-secondary text-white">
+            <!-- <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
                         <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
