--- a/qa.html
+++ b/qa.html
@@ -65,8 +65,8 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-8"><div>WSSC’s Quality Assurance team’s main responsibility is 
-                                            to ensure that software products and processes conform to specified requirements, standards, 
-                                            and procedures before reaching users.</div></div>
+                                            to <b>ensure that software products and processes conform to specified requirements, standards, 
+                                            and procedures</b> before reaching users.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -82,11 +82,16 @@
                                                 <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>The Software Development Lifecycle (SDLC) is the 
-                                            process that developers use to design and build high-quality software 
-                                            for computers, cloud deployment, mobile phones, video games, and more. 
-                                            In the software development lifecycle, the testing phase 
-                                            comes after the application development and before the deployment phase.</div></div>
+                                        <div class="col-lg-8"><div>The Software Development Lifecycle (SDLC) is <b>the 
+                                            process that developers use to create high-quality software. </b>It consists of 
+                                            6 quality gates: 
+                                            <li>Requirements Gathering</li>
+                                            <li>Analysis</li>
+                                            <li>Design</li>
+                                            <li>Implementation</li>
+                                            <li><b>Testing</b></li>
+                                            <li>Deployment</li>
+                                        </div></div>
                                     </div>
                                 </div>
                             </div>
@@ -97,15 +102,15 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">What is patching?</div>
+                                                <div class="text-primary fw-bolder mb-2">What is "patching?"</div>
                                                 <!-- <div class="small fw-bolder">SEM Specialist</div>
                                                 <div class="small text-muted">Wayne Enterprises</div>
                                                 <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Patching is the process of determining
-                                            if a patch will cause problems for an organization's unique 
-                                            combination of hardware, software and configuration settings. </div></div>
+                                        <div class="col-lg-8"><div> Patch testing is the process of determining
+                                            <b>if a security patch caused any issues</b> in the existing applications that they
+                                            were applied to </div></div>
                                     </div>
                                 </div>
                             </div>
@@ -122,9 +127,18 @@
                                                 <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Testing can be broken up into different classifications including 
-                                            regression testing, system testing, functional testing, integration testing, white-box testing, 
-                                            black-box testing, post production testing, performance testing, smoke testing, and security testing.
+                                        <div class="col-lg-8"><div>Common testing methodologies include... 
+                                            <li>regression testing</li> 
+                                            <!-- end to end -->
+                                            <li>system testing</li> 
+                                            <!-- seeing if it works with outside module -->
+                                            <li>integration testing</li>
+                                            <li>white-box testing</li>
+                                            <li>black-box testing</li>
+                                            <!-- stress testing -->
+                                            <li>performance testing</li>
+                                            <li>smoke testing</li>
+                                            <li>security testing</li>
                                         </div></div>
                                     </div>
                                 </div>
@@ -141,10 +155,11 @@
                                                 <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>There are three main types of requirements in quality assurance: 
-                                            system requirements, which define the technical and functional needs of the application; 
-                                            security requirements, which ensure the protection and integrity of data; and business 
-                                            requirements, which align the application with business goals and stakeholder needs.
+                                        <div class="col-lg-8"><div>Common types of requirement include...
+                                            <li><b>system requirements:</b> defines the technical and functional needs of the application</li> 
+                                            <li><b>security requirements:</b> ensures the protection and integrity of data</li> 
+                                            <li><b>business requirements:</b> aligns the application with business goals and stakeholder needs</li> 
+                                            <li><b>performance requirements:</b>...</li> 
                                         </div></div>
                                     </div>
                                 </div>
@@ -153,12 +168,34 @@
                         <!-- Project Section-->
                         <section>
                             <h2 class="text-secondary fw-bolder mb-4">Projects</h2>
+                            <!-- Project Card 5-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Work and Asset Management (WAM)</h2>
+                                            <p> 
+                                                <b>Description:</b> 
+                                                    <br>
+                                                    WSSC's Work Asset Management (WAM) application manages asset lifecycles, 
+                                                    streamlines maintenance, and optimizes resource allocation for efficient service delivery.
+                                            </p>
+                                                <p>
+                                                <b>My Contributions:</b>
+                                                    <li> Transferred test scripts into the test plan section of ALM for the project.</li>
+                                                    <li> Began test execution for the application’s admin functionalities.</li>
+                                            </p>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-18 at 3.34.09 PM.png" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">AI Sentiment Analysis</h2>
+                                            <h2 class="fw-bolder">AI Sentiment Analysis [FIND A WAY TO MENTION THIS]</h2>
                                             <p> 
                                             <b>Description:</b> 
                                                 <br>
@@ -171,7 +208,7 @@
                                                 results and our expected outcomes.</li>
                                             </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.21.17 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -180,7 +217,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Facilities Information Tool (FIT)</h2>
+                                            <h2 class="fw-bolder">Facilities Information Tool (FIT) to Power BI Migration</h2>
                                             <p> 
                                                 <b>Description:</b> 
                                                     <br>
@@ -194,9 +231,10 @@
                                                         in a personal defects document.</li>
                                                     <li>Collaborated with a developer to address issues, 
                                                         documenting fixes and noting known issues being worked on.</li>
+                                                    <li>Created a test plan for the migration.</li>
                                             </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.10.44 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -205,7 +243,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">YeaLink</h2>
+                                            <h2 class="fw-bolder">Conference Room YeaLink Integration</h2>
                                             <p> 
                                                 <b>Description:</b> 
                                                     <br>
@@ -219,7 +257,7 @@
                                                          questions in a document.</li>
                                             </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.12.02 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -242,29 +280,7 @@
                                                          to the correct destination.</li>
                                             </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Project Card 5-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Work and Asset Management (WAM)</h2>
-                                            <p> 
-                                                <b>Description:</b> 
-                                                    <br>
-                                                    WSSC's Work Asset Management (WAM) application manages asset lifecycles, 
-                                                    streamlines maintenance, and optimizes resource allocation for efficient service delivery.
-                                            </p>
-                                                <p>
-                                                <b>My Contributions:</b>
-                                                    <li> Transferred test scripts into the test plan section of ALM for the project.</li>
-                                                    <li>Initiated test execution for the application’s admin functionalities.</li>
-                                            </p>
-                                        </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.13.41 PM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -273,7 +289,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Windows July 2024 Patching</h2>
+                                            <h2 class="fw-bolder">Windows and Red Hat July 2024 Patchings</h2>
                                             <p> 
                                                 <b>Description:</b> 
                                                     <br>
@@ -285,7 +301,31 @@
                                                         were testing their designated applications to confirm they ran smoothly.</li>
                                             </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Screenshot 2024-07-30 at 1.19.30 PM.png" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 7-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Parking Permit Application</h2>
+                                            <p> 
+                                                <b>Description:</b> 
+                                                    <br>WSSC is implementing an database that will allow 
+                                                    users to send an online form to WSSC, where an admin 
+                                                    can approve or deny permits using the new application.
+                                                    
+                                            </p>
+                                                <p>
+                                                <b>My Contributions:</b>
+                                                    <li> Formulated a test plan for the project.</li>
+                                                    <li> Created test scripts in ALM to ensure the application
+                                                        meets business requirements.</li>
+                                            </p>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Screenshot 2024-08-02 at 10.17.20 AM.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -313,7 +353,7 @@
                                     <div class="mb-0">
                                         <div class="d-flex align-items-center mb-4">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Soft skills</span></h3>
+                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Soft Skills</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Attention to Detail</div></div>
