--- a/qa.html
+++ b/qa.html
@@ -195,7 +195,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">AI Sentiment Analysis [FIND A WAY TO MENTION THIS]</h2>
+                                            <h2 class="fw-bolder">AI Sentiment Analysis</h2>
                                             <p> 
                                             <b>Description:</b> 
                                                 <br>
@@ -310,19 +310,18 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Parking Permit Application</h2>
+                                            <h2 class="fw-bolder">Test Plan Creation</h2>
                                             <p> 
                                                 <b>Description:</b> 
-                                                    <br>WSSC is implementing an database that will allow 
-                                                    users to send an online form to WSSC, where an admin 
-                                                    can approve or deny permits using the new application.
+                                                    <br>WSSC QA Team uses Test Plans to outline important
+                                                    information such as testing scope, testing methods, and
+                                                    defect reporting precedures for each project.
                                                     
                                             </p>
                                                 <p>
                                                 <b>My Contributions:</b>
-                                                    <li> Formulated a test plan for the project.</li>
-                                                    <li> Created test scripts in ALM to ensure the application
-                                                        meets business requirements.</li>
+                                                    <li> Formulated a test plan for the Facilities Information Tool
+                                                        and Parking Permit Application.</li>
                                             </p>
                                         </div>
                                         <img class="img-fluid" src="assets/Screenshot 2024-08-02 at 10.17.20 AM.png" alt="..." />
