--- a/qa.html
+++ b/qa.html
@@ -320,8 +320,8 @@
                                             </p>
                                                 <p>
                                                 <b>My Contributions:</b>
-                                                    <li> Formulated a test plan for the Facilities Information Tool
-                                                        and Parking Permit Application.</li>
+                                                    <li> Formulated a test plan for the <a href="https://drive.google.com/file/d/18v9tEYJAK1T5IKOQYZVxtdB0jmD5JBlB/view?usp=sharing"> Facilities Information Tool </a>
+                                                        and <a href="https://drive.google.com/file/d/1TOeU9BpUPcSfnoGki7pP7-NxWx8qG3RL/view?usp=sharing">Parking Permit Database</a>.</li>
                                             </p>
                                         </div>
                                         <img class="img-fluid" src="assets/Screenshot 2024-08-02 at 10.17.20 AM.png" alt="..." />
